kafka-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
